fixed span8 issue on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,5 +30,5 @@ table {
 }
 
 .span8 {
-    max-width: 620px;
+    max-width: 100%;
 }
